<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/selectIconsTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/select_icons_title"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/binImageView" />

    <ImageView
        android:id="@+id/paperImageView"
        android:layout_width="@dimen/flag_btn_width"
        android:layout_height="@dimen/flag_btn_height"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/selectIconsTitleTextView"
        app:srcCompat="@drawable/baseline_description_24" />

    <ImageView
        android:id="@+id/foodImageView"
        android:layout_width="@dimen/flag_btn_width"
        android:layout_height="@dimen/flag_btn_height"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/selectIconsTitleTextView"
        app:srcCompat="@drawable/round_local_pizza_24" />

    <ImageView
        android:id="@+id/plasticImageView"
        android:layout_width="@dimen/flag_btn_width"
        android:layout_height="@dimen/flag_btn_height"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/selectIconsTitleTextView"
        app:srcCompat="@drawable/round_local_drink_24" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/flag_btn_label_distance"
        android:layout_marginEnd="@dimen/flag_btn_spaces"
        android:layout_marginRight="@dimen/flag_btn_spaces"
        android:width="@dimen/label_width"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/paper_label"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paperImageView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/flag_btn_label_distance"
        android:width="@dimen/label_width"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/food_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodImageView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/flag_btn_spaces"
        android:layout_marginLeft="@dimen/flag_btn_spaces"
        android:layout_marginTop="@dimen/flag_btn_label_distance"
        android:width="@dimen/label_width"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/plastic_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/plasticImageView" />

    <ImageView
        android:id="@+id/glassImageView"
        android:layout_width="@dimen/flag_btn_width"
        android:layout_height="@dimen/flag_btn_height"
        android:layout_marginTop="@dimen/flag_buttons_vertical_distance"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/round_local_bar_24" />

    <ImageView
        android:id="@+id/batteryImageView"
        android:layout_width="@dimen/flag_btn_width"
        android:layout_height="@dimen/flag_btn_height"
        android:layout_marginTop="@dimen/flag_buttons_vertical_distance"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/baseline_battery_charging_full_24" />

    <ImageView
        android:id="@+id/electronicImageView"
        android:layout_width="@dimen/flag_btn_width"
        android:layout_height="@dimen/flag_btn_height"
        android:layout_marginTop="@dimen/flag_buttons_vertical_distance"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/round_phone_android_24" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/flag_btn_label_distance"
        android:layout_marginEnd="@dimen/flag_btn_spaces"
        android:layout_marginRight="@dimen/flag_btn_spaces"
        android:width="@dimen/label_width"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/glass_label"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/glassImageView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/flag_btn_label_distance"
        android:width="@dimen/label_width"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/battery_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/batteryImageView" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/flag_btn_spaces"
        android:layout_marginLeft="@dimen/flag_btn_spaces"
        android:layout_marginTop="@dimen/flag_btn_label_distance"
        android:width="@dimen/label_width"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/electronic_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/electronicImageView" />

</androidx.constraintlayout.widget.ConstraintLayout>